	* Added an overload to Device.UpdateSubresource() that allows the update to occur without a destination offset.
	* Added the SamplerState interface.
	* Filled in missing shader methods.
	* Refactored ShaderSignature and ShaderBytecode to be independent of one another.
	* Added functions to compile to shader bytecode.
	* Added functions to extract shader signatures.
	* Added constructors for geometry, vertex, and pixel shaders.
	* Changed inheritance hierarchies to make base types abstract.
	* Added overloads to EffectVectorVariable.Set to handle smaller sized vectors.
	
Direct3D 10.1
	* Added the Direct3D 10.1 subsystem.
	
Direct3D11
	* Added the Direct3D 11 subsystem.

DirectSound
	* Removed the confusing lockEntireBuffer parameter from CaptureBuffer.Read.
	* Fixed a bug in SoundBuffer.Read that caused EndOfStreamException to be thrown erroneously.

DirectInput
	* Refactored the Device class into an abstract base class.
	* Added a CustomDevice<T> class for devices with custom data formats.
	* Added the Keyboard class for keyboard devices.
	* Added the Mouse class for mouse devices.
	* Added the Joystick class for joystick devices.
	* Changed a few collection results to return IList<T> instead of IEnumerable<T>.
	* Removed the BufferedData indirection. Buffered data reads now return direct lists of data.
	* Did some general code clean-up in DirectInput to better match recent changes in the library.
	* Added support for effects.
	* Added type specific parameters for effects.
	* Added the ability to get image and object info from a device.
	* Filled in miscellaneous device functionality.
	
XAudio2
	* Changed the XAudio2 device to stop explicitly initializing COM. This allows the caller to use whichever calling model he wishes.

Windows
	* Added a MessagePump.Run() method to wrap up all of the message loop functionality.
	* Added a RenderForm class that sets a few desired properties and defaults.